Stop version-controlling of following files:
  run_statistics/RunPeriod-2019-11/fig1.png
  run_statistics/RunPeriod-2019-11/fig2.png
  run_statistics/RunPeriod-2019-11/fig3.png
  run_statistics/RunPeriod-2019-11/fig4.png
  run_statistics/RunPeriod-2019-11/int_triggers.log

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /utilities/ignore_time_stamp.txt
+/run_statistics/RunPeriod-2019-11/fig1.png
+/run_statistics/RunPeriod-2019-11/fig2.png
+/run_statistics/RunPeriod-2019-11/fig3.png
+/run_statistics/RunPeriod-2019-11/fig4.png
+/run_statistics/RunPeriod-2019-11/int_triggers.log
