--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 /run_statistics/RunPeriod-2019-11/fig3.png
 /run_statistics/RunPeriod-2019-11/fig4.png
 /run_statistics/RunPeriod-2019-11/int_triggers.log
+/js_old/
+/launch_analysis/
+/offmon/
+/old/
+/pid_syst/
+/recon/
+/test
